tests/core/snapshots/resolve-with-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(allowedHeaders: ["authorization"]) @link(src: "config.yml", type: Config) {
  query: Query
}

type Post {
  body: String!
  id: ID!
  title: String!
  userId: ID!
}

type Query {
  post1: Post @http(url: "http://jsonplaceholder.typicode.com/posts/{{.headers.authorization}}")
}
