tests/core/snapshots/routes-param-on-server-directive.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000, routes: {status: "/health", graphQL: "/tailcall-gql"}) @upstream {
  query: Query
}

type Query {
  users: [User] @http(url: "http://jsonplaceholder.typicode.com/users")
}

type User {
  name: String
}
