tests/core/snapshots/simple-query.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  firstUser: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  id: Int
  name: String
}
