tests/core/snapshots/test-cache.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  user: User @http(url: "http://jsonplaceholder.typicode.com/foo") @cache(maxAge: 300)
}

type User @cache(maxAge: 900) {
  id: Int
  name: String
}
